Add some basic design stuff

--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -1,5 +1,29 @@
+// Color Palette
+$mint = #95d6c9
+$teal = #20a38a
+$emerald = #217034
+$dark-grey = #5f6b62
+$light-grey = #c6d0c9
+$med-blue = #1873cd
+
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  padding: 2.5em
+  font 14px 'Noto Sans', Helvetica, sans-serif
+  background-color $dark-grey
+
+h1
+  font-family 'Trocchi', 'Georgia', serif
+  color $teal
+  text-shadow 1px 1px 2px $emerald
+  font-size 3em
 a
-  color: #00B7FF
+  color $emerald
+
+.wrapper
+  width 80%
+  margin 0 auto
+  background-color #fff
+  padding 1.5em 2em 2em
+
+nav ol
+  list-style-type none
