--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
+  p Welcome to Gigs, a hyperlocal job board.
+  p To make the most of Gigs, 
+    a(href='/signup') Sign Up
