--- a/app/views/global.styl
+++ b/app/views/global.styl
@@ -1,76 +1,82 @@
 body
-	background white
-	font-family arial
-	padding 0
-	margin 0
-		
+  background white
+  font-family arial
+  padding 0
+  margin 0
+
 h1
-	background #333740
-	padding 10px
-	color #FAFAFB
+  background #333740
+  padding 10px
+  color #FAFAFB
+  margin 0
+
+.subtitle
+  color #FAFAFB
+  background #333740
+  margin 0 0 10px 0
 
 h2
-	margin 0 0 5px
-	color #333741
+  margin 0 0 5px
+  color #333741
 
 a
-	text-decoration none
-	color #2F323B
+  text-decoration none
+  color #2F323B
 
 .message
-	display block
-	width 500px
-	background #f6f5f3
-	border 1px solid #e6e4e2
-	padding: 10px
-	color #2F323B
-	margin 10px auto
-	text-align center
-		
+  display block
+  width 500px
+  background #f6f5f3
+  border 1px solid #e6e4e2
+  padding: 10px
+  color #2F323B
+  margin 10px auto
+  text-align center
+    
 .form-signin,
 .form-signup
-	width 200px
-	margin 0 auto
-	text-align center
-	
-	input
-		padding 3px 2px
-		display block
-		margin 0 auto 5px
-		
-	button
-		background white
-		
+  width 200px
+  margin 0 auto
+  text-align center
+  
+  input
+    padding 3px 2px
+    display block
+    margin 0 auto 5px
+    
+  button
+    background white
+    
 .btn
-	padding 3px 5px
-	border 1px solid #C8E3A5
-	margin 0 5px
-	text-decoration none
-	color #9BC34D
-	background white
-	&:hover
-		color white
-		cursor pointer
-		background #C8E3A5;
+  padding 3px 5px
+  border 1px solid #C8E3A5
+  margin 0 5px
+  text-decoration none
+  color #9BC34D
+  background white
+  &:hover
+    color white
+    cursor pointer
+    background #C8E3A5;
 
 .user-list
-	width 300px
-	margin 0 auto
-	background #f6f5f3
-	border 1px solid #e6e4e2
-	padding: 10px
-	color #2F323B
-	
-	ul
-		list-style-type none
-		margin 5px 0
-		padding 0
-	
-	li
-		padding 3px 10px
-		&:hover
-			background #e6e4e2
-			cursor pointer
-			
-		a
-			display block
+  width 300px
+  margin 0 auto
+  background #f6f5f3
+  border 1px solid #e6e4e2
+  padding: 10px
+  color #2F323B
+  
+  ul
+    list-style-type none
+    margin 5px 0
+    padding 0
+  
+  li
+    padding 3px 10px
+    &:hover
+      background #e6e4e2
+      cursor pointer
+      
+    a
+      display block
