--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -1,16 +1,3 @@
-!!! 5
-html
-	head
-	link(rel='stylesheet', type='text/css', href='global.css')
-	
-	body
-		h1= locals.title
-		
-			
-		a(href='/').btn Home
-		
-		a(href='/jobs').btn Jobs
-		
-		a(href='/users').btn Users
-		
-		a(href='/logout').btn Log Out
+extends layout
+block content
+p hi
