--- a/app/views/signup.jade
+++ b/app/views/signup.jade
@@ -3,4 +3,4 @@ block content
   form(method='post', action='/signup').form-signup
     input(type='text', name='username', placeholder='username')
     input(type='password', name='password', placeholder='password')
-    button(type='submit').btn Sign Up
+    input(type='submit').btn Sign Up
