Change route name to jobs/create to be more RESTful

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -9,7 +9,7 @@ html
     header
       a(href='/').btn Home
       a(href='/jobs').btn Jobs
-      a(href='/jobs/new').btn New Job
+      a(href='/jobs/create').btn New Job
       a(href='/users').btn Users
       a(href='/logout').btn Log Out
     if (locals.message)
