--- a/app/views/jobs/new_job_form.jade
+++ b/app/views/jobs/new_job_form.jade
@@ -2,7 +2,7 @@ extends ../layout
 block content
   h2 Create a new job listing
   ol
-    form
+    form(method='post', action='/jobs/create')
       fieldset
         li 
           label(for='position') Position Name
