Fleshing out the Job Details page template

--- a/app/views/global.styl
+++ b/app/views/global.styl
@@ -1,8 +1,18 @@
 body
   background white
   font-family arial
+  font-size 14pt
   padding 0
   margin 0
+
+#content
+  margin 1em
+  padding 1em
+
+footer
+  background #333740
+  color #FAFAFB
+  padding 2em
 
 h1
   background #333740
@@ -14,6 +24,7 @@ h1
   color #FAFAFB
   background #333740
   margin 0 0 10px 0
+  padding 1em
 
 h2
   margin 0 0 5px
@@ -80,3 +91,7 @@ a
       
     a
       display block
+
+.jobitem
+  font-weight bold
+
