--- a/app/public/global.css
+++ b/app/public/global.css
@@ -1,6 +1,8 @@
-body{background:#fff;font-family:arial;padding:0;margin:0}
+body{background:#fff;font-family:arial;font-size:14pt;padding:0;margin:0}
+#content{margin:1em;padding:1em}
+footer{background:#333740;color:#fafafb;padding:2em}
 h1{background:#333740;padding:10px;color:#fafafb;margin:0}
-.subtitle{color:#fafafb;background:#333740;margin:0 0 10px 0}
+.subtitle{color:#fafafb;background:#333740;margin:0 0 10px 0;padding:1em}
 h2{margin:0 0 5px;color:#333741}
 a{text-decoration:none;color:#2f323b}
 .message{display:block;width:500px;background:#f6f5f3;border:1px solid #e6e4e2;padding:10px;color:#2f323b;margin:10px auto;text-align:center}
@@ -14,3 +16,4 @@ a{text-decoration:none;color:#2f323b}
 .user-list li{padding:3px 10px;}
 .user-list li:hover{background:#e6e4e2;cursor:pointer}
 .user-list li a{display:block}
+.jobitem{font-weight:bold}
