added purecss.io to project.
- http://yui.yahooapis.com/pure/0.2.1/pure-min.css

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,6 +2,7 @@
 html
   head
     title= 'Gigs : ' + locals.title
+    link(rel='stylesheet', type='text/css', href='/pure-min.css')
     link(rel='stylesheet', type='text/css', href='/global.css')
   body
     h1= 'Gigs'
