--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,8 +2,8 @@
 html
   head
     title= 'Gigs : ' + locals.title
-    link(rel='stylesheet', type='text/css', href='/pure-min.css')
-    link(rel='stylesheet', type='text/css', href='/global.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/pure-min.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheets/global.css')
   body
     h1= 'Gigs'
     div.subtitle= "A hyperlocal jobs board"
