--- a/app/public/stylesheets/global.styl
+++ b/app/public/stylesheets/global.styl
@@ -1,7 +1,9 @@
+@import colors
+
 body
-  background white
-  font-family arial
-  font-size 14pt
+  background #fff
+  font-family 'Lucida Grande'
+  font-size 14px
   padding 0
   margin 0
 
@@ -10,8 +12,8 @@ body
   padding 1em
 
 footer
-  background #333740
-  color #FAFAFB
+  background $darkgrey
+  color $offwhite
   padding 2em
 
 h1
@@ -94,4 +96,3 @@ a
 
 .jobitem
   font-weight bold
-
