--- a/app/views/register-employer.jade
+++ b/app/views/register-employer.jade
@@ -7,19 +7,13 @@ block content
         label Email
         input(type="text",name="email")
       div
-        label First Name
-        input(type="text",name="firstname")
-      div
-        label Last Name
-        input(type="text",name="lastname")
-      div
         label Username
         input(type="text",name="username")
       div
+        label Name
+        input(type="text",name="name")
+      div
         label Password
         input(type="password",name="password")
-      div
-        label Phone Number
-        input(type="text",name="phone")        
       div
         input(type="submit",value="Register")
